# vcd-tools

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: test_vcd_tools.py
vcd_tools/: __init__.py  vcd_tools.py
